--- a/static/search.html
+++ b/static/search.html
@@ -1,25 +1,33 @@
-<form id="serachForm" ng-controller="search">
-	<div style="width:100%;">
-		<label for="name"><span>Serach for: </span>
-		<input type="text" ng-model="searchText.Name" style="width: 100%;" id="name" /></label>
+<div class="container-left">
+	<div class="row">
+		<div class="col-md-12">
+			<form id="serachForm" ng-controller="search">
+				<div class="form-group">
+					<label for="name"><span>Serach for: </span>
+					<input type="text" ng-model="searchText.Name" class="form-control" id="name" /></label>
+				</div>
+
+				<table class="table-striped">
+					<tbody>
+						<thead>
+							<tr>
+								<th>Monster</th>
+								<th>Monster Name</th>
+								<th>Actions</th>
+							</tr>
+						</thead>
+						<tr ng:repeat="i in tpl_monster.items | filter:searchText | orderBy: 'Name'">
+							<td><div class="thumbnail"><img ng-src="./Monsters/{{i.SpriteName}}.png" /></div></td>
+							<td class="col-md-8"><div  class = "panel-body">{{i.Name}}</div></td>
+							<td class="col-md-2">
+								<img ng-src="./images/edit.png" ng-click="changePage(1);loadRegister(i);" style="cursor: pointer;" width="40" height="40" />
+								<img ng-src="./images/delete.png" confirmed-click="deleteMonster(i)" ng-confirm-click="Would you like to delete the monster {{i.Name}}?" style="cursor: pointer;" width="40" height="40" />
+
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</form>
+		</div>
 	</div>
-	<div style="width:100%;">
-		<table style="width: 100%;">
-			<tbody>
-				<tr style="width: 5%;">
-					<th>Monster</th>
-					<th style="width: 85%;">Monster Name</th>
-					<th style="width: 10%;">Actions</th>
-				</tr>
-				<tr ng:repeat="i in tpl_monster.items | filter:searchText | orderBy: 'Name'">
-					<td><img ng-src="./Monsters/{{i.SpriteName}}.png" width="80" height="80" /></td>
-					<td>{{i.Name}}</td>
-					<td>
-						<img ng-src="./images/edit.png" ng-click="changePage(1);loadRegister(i);" style="cursor: pointer;" width="40" height="40" />
-						<img ng-src="./images/delete.png" confirmed-click="deleteMonster(i)" ng-confirm-click="Would you like to delete the monster {{i.Name}}?" style="cursor: pointer;" width="40" height="40" />
-					</td>
-				</tr>
-		  </tbody>
-		</table>
-	</div>
-</form>
+</div>
