--- a/static/search.html
+++ b/static/search.html
@@ -20,7 +20,7 @@
 							<td><div class="thumbnail"><img ng-src="./Monsters/{{i.SpriteName}}.png" /></div></td>
 							<td class="col-md-8"><div  class = "panel-body">{{i.Name}}</div></td>
 							<td class="col-md-2">
-								<img ng-src="./images/edit.png" ng-click="changePage(1);loadRegister(i);" style="cursor: pointer;" width="40" height="40" />
+								<a href="#!/monsterData" ng-click="loadRegister(i);"><img ng-src="./images/edit.png" style="cursor: pointer;" width="40" height="40" /></a>
 								<img ng-src="./images/delete.png" confirmed-click="deleteMonster(i)" ng-confirm-click="Would you like to delete the monster {{i.Name}}?" style="cursor: pointer;" width="40" height="40" />
 
 							</td>
